// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectName Accepts and applies additional \`styles\` prop 1`] = `
.emotion-0 {
  color: hotpink;
}

<span
  className="emotion-0"
/>
`;

exports[`ObjectName should apply dimming if \`dimmed\` prop is true 1`] = `
.emotion-0 {
  color: rgb(136, 19, 145);
  opacity: 0.6;
}

<span
  className="emotion-0"
>
  testvalue
</span>
`;

exports[`ObjectName should not apply dimming if \`dimmed\` prop is false 1`] = `
.emotion-0 {
  color: rgb(136, 19, 145);
}

<span
  className="emotion-0"
>
  testvalue
</span>
`;

exports[`ObjectName should render 1`] = `
.emotion-0 {
  color: rgb(136, 19, 145);
}

<span
  className="emotion-0"
>
  testvalue
</span>
`;
